# PortfolioWebiste-QT-Cpp

./: .gitattributes  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CNAME  Fonts.qrc  README.md  ResumeKP.html  about.qml  appWEBSITE.html  appWEBSITE.js  appWEBSITE.wasm  appWEBSITE.worker.js  appwebsite_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  grayCic  greeenCic  home.qml  img.qrc  main.cpp  main.qml  pImg.qrc  pdf_viewer.html  pj1  project.qml  resume.qml
.cmake/api/v1/reply.prev/: cache-v2-44cd6b53970cb1186f16.json  directory-.-Debug-1ec2707b000cd6ee1e6e.json  target-all_qmllint-Debug-397235865e98d733c81e.json  target-all_qmllint_json-Debug-a0624c3312d9fafdf2d2.json  target-all_qmllint_module-Debug-921558f8943bd55757fa.json  (+3 more)
.qt/: QtDeploySupport.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_appWEBSITE.cmake  Qt6_QmlPlugins_Imports_appWEBSITE.rsp
.qtc_clangd/: compile_commands.json
.rcc/: appWEBSITE_raw_qml_0.qrc  qmake_WEBSITE.qrc  qrc_appWEBSITE_raw_qml_0.cpp  qrc_qmake_WEBSITE.cpp
.rcc/qmlcache/: appWEBSITE_about_qml.cpp  appWEBSITE_home_qml.cpp  appWEBSITE_main_qml.cpp  appWEBSITE_project_qml.cpp  appWEBSITE_qml_loader_file_list.rsp  appWEBSITE_qmlcache_loader.cpp  appWEBSITE_resume_qml.cpp
UI/components/: Fonts.qml  Header.qml  LabelCppBotton.qml
UI/pages/: home.qml
WEBSITE/: appWEBSITE_qml_module_dir_map.qrc  pImg.qrc  project.qml  qmldir  resume.qml
appWEBSITE_autogen/: deps  moc_predefs.h
appWEBSITE_autogen/EWIEGA46WW/: qrc_Fonts.cpp  qrc_pImg.cpp
qmltypes/: appWEBSITE_foreign_types.txt
(+775 files in other folders)
